--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>javafx-media</artifactId>
             <version>21.0.1</version>
         </dependency>
+        <!-- Może potrzebne >///< -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.44.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
